force-app/main/default/objects/TTS_Transaction__c/TTS_Transaction__c.object-meta.xml
<CustomObject>
    <description>Records incoming or outgoing monetary transactions related to a Technology, Agreement, Protection, Opportunity, Contract, Space, Campaign, Agreement Party, or Agreement Deliverable.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T{00000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>