force-app/main/default/objects/TTS_Transaction__c/fields/Agreed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stores the proposed or agreed monetary amount of the transaction.</description>
    <inlineHelpText>Enter the proposed or agreed transaction amount.</inlineHelpText>
    <label>Proposed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>