force-app/main/default/objects/TTS_Transaction__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the transaction to the related Agreement.</description>
    <inlineHelpText>Select the Agreement associated with this transaction.</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>TTS_Agreement__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>