force-app/main/default/objects/TTS_Transaction__c/fields/Agreement_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the transaction to the related Agreement Deliverable.</description>
    <inlineHelpText>Select the Agreement Deliverable associated with this transaction.</inlineHelpText>
    <label>Agreement Deliverable</label>
    <referenceTo>TTS_Agreement_Deliverable__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>