force-app/main/default/objects/TTS_Transaction__c/fields/Agreement_Party__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the transaction to the related Agreement Party.</description>
    <inlineHelpText>Select the Agreement Party associated with this transaction.</inlineHelpText>
    <label>Agreement Party</label>
    <referenceTo>TTS_Agreement_Party__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>