force-app/main/default/objects/TTS_Transaction__c/fields/Applied_Royalty_Rate__c.field-meta.xml
<CustomField>
    <fullName>Applied_Royalty_Rate__c</fullName>
    <inlineHelpText>The royalty rate applied to the reported revenue for this transaction.</inlineHelpText>
    <label>Applied Royalty Rate</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>