force-app/main/default/objects/TTS_Transaction__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Indicates whether funds are incoming to or outgoing from the organisation.</description>
    <inlineHelpText>Select Incoming for funds received or Outgoing for funds paid.</inlineHelpText>
    <label>Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Outgoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>