force-app/main/default/objects/TTS_Transaction__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Records the end date and time for a recurring or period transaction.</description>
    <inlineHelpText>Enter when the recurring or period transaction ends.</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>