force-app/main/default/objects/TTS_Transaction__c/fields/IP_Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>IP_Actual_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stores the final actual monetary amount of the transaction.</description>
    <inlineHelpText>Enter the final amount actually paid or received.</inlineHelpText>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>