force-app/main/default/objects/TTS_Transaction__c/fields/IP_Contract__c.field-meta.xml
<CustomField>
    <fullName>IP_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the transaction to the related standard Contract record.</description>
    <inlineHelpText>Select the standard Contract associated with this transaction.</inlineHelpText>
    <label>Related Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>