force-app/main/default/objects/TTS_Transaction__c/fields/IP_Expected_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Expected_Payment_Date__c</fullName>
    <description>Records the date and time when payment is expected.</description>
    <inlineHelpText>Enter the date and time when the payment is expected to transfer.</inlineHelpText>
    <label>Expected Payment Date</label>
    <type>DateTime</type>
</CustomField>