force-app/main/default/objects/TTS_Transaction__c/fields/IP_External_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_External_Payment_Reference__c</fullName>
    <description>Stores the payment reference assigned by an external system or party.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the payment reference supplied by the external system or party.</inlineHelpText>
    <label>External Payment Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>