force-app/main/default/objects/TTS_Transaction__c/fields/IP_Internal_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_Internal_Payment_Reference__c</fullName>
    <description>Stores the organisation's internal payment reference for the transaction.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the internal reference used to identify this payment.</inlineHelpText>
    <label>Internal Payment Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>