force-app/main/default/objects/TTS_Transaction__c/fields/IP_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>IP_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the transaction to the related Opportunity.</description>
    <inlineHelpText>Select the Opportunity associated with this transaction.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>