force-app/main/default/objects/TTS_Transaction__c/fields/IP_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>IP_Purchase_Order__c</fullName>
    <description>Stores the purchase order reference associated with the transaction.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the purchase order reference for this transaction.</inlineHelpText>
    <label>Purchase Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>