force-app/main/default/objects/TTS_Transaction__c/fields/IP_Related_IP__c.field-meta.xml
<CustomField>
    <fullName>IP_Related_IP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the transaction to the related Technology record.</description>
    <inlineHelpText>Select the Technology associated with this transaction.</inlineHelpText>
    <label>Technology</label>
    <referenceTo>TTS_Technology__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>