force-app/main/default/objects/TTS_Transaction__c/fields/IP_Transaction_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>IP_Transaction_Date_Time__c</fullName>
    <description>Records the proposed date and time of the transaction.</description>
    <inlineHelpText>Enter the proposed date and time for the transaction.</inlineHelpText>
    <label>Transaction Date/Time</label>
    <type>DateTime</type>
</CustomField>