force-app/main/default/objects/TTS_Transaction__c/fields/Law_Firm_Matter__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The law firm matter or docket engagement associated with this transaction.</inlineHelpText>
    <label>Law Firm Matter</label>
    <referenceTo>TTS_Law_Firm_Matter__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>