force-app/main/default/objects/TTS_Transaction__c/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the transaction to the related Protection record.</description>
    <inlineHelpText>Select the Protection associated with this transaction.</inlineHelpText>
    <label>Protection</label>
    <referenceTo>TTS_Protection__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>