force-app/main/default/objects/TTS_Transaction__c/fields/Protection_Litigation__c.field-meta.xml
<CustomField>
    <fullName>Protection_Litigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The related protection litigation for legal fee or settlement transactions.</inlineHelpText>
    <label>Protection Litigation</label>
    <referenceTo>TTS_Protection_Litigation__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>