force-app/main/default/objects/TTS_Transaction__c/fields/Recurrence_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Frequency__c</fullName>
    <description>Defines how often a recurring transaction repeats.</description>
    <inlineHelpText>Select how often this recurring transaction repeats.</inlineHelpText>
    <label>Recurrence Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>