force-app/main/default/objects/TTS_Transaction__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the transaction repeats on a defined schedule.</description>
    <inlineHelpText>Select this when the transaction repeats on a schedule.</inlineHelpText>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>