force-app/main/default/objects/TTS_Transaction__c/fields/Reported_Royalty_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Reported_Royalty_Revenue__c</fullName>
    <inlineHelpText>Revenue reported by the licensee or obligated party for the royalty calculation period.</inlineHelpText>
    <label>Reported Royalty Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>