force-app/main/default/objects/TTS_Transaction__c/fields/Royalty_Report_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Report_End_Date__c</fullName>
    <label>Royalty Report End Date</label>
    <type>Date</type>
</CustomField>