force-app/main/default/objects/TTS_Transaction__c/fields/Royalty_Term__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The royalty term used to justify and calculate this transaction amount.</inlineHelpText>
    <label>Royalty Term</label>
    <referenceTo>TTS_Royalty_Term__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>