force-app/main/default/objects/TTS_Transaction__c/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the transaction to the related Space, such as for rent charges.</description>
    <inlineHelpText>Select the Space associated with this transaction, if applicable.</inlineHelpText>
    <label>Space</label>
    <referenceTo>TTS_Space__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>