force-app/main/default/objects/TTS_Transaction__c/fields/Space_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Space_Subscription_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Space Subscription/Fee</label>
    <referenceTo>TTS_Space_Fee__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>