force-app/main/default/objects/TTS_Transaction__c/fields/Space_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Space_Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the transaction to the Space Tenant it relates to, so a space fee can be attributed to the tenant who pays it.</description>
    <inlineHelpText>Select the Space Tenant this transaction relates to, if applicable.</inlineHelpText>
    <label>Space Tenant</label>
    <referenceTo>TTS_Space_Tenant__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>