force-app/main/default/objects/TTS_Transaction__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Records the start date and time for a recurring or period transaction.</description>
    <inlineHelpText>Enter when the recurring or period transaction begins.</inlineHelpText>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>