force-app/main/default/objects/TTS_Transaction__c/fields/Total_Contributor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Contributor_Amount__c</fullName>
    <description>Sum of all Contributor amounts recorded against this Transaction, used to validate that contributions reconcile to the Actual Amount.</description>
    <inlineHelpText>Sum of all Contributor amounts recorded against this Transaction.</inlineHelpText>
    <label>Total Contributor Amount</label>
    <summaryForeignKey>TTS_Contributor__c.IP_Related_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>TTS_Contributor__c.Amount__c</summarizedField>
    <type>Summary</type>
</CustomField>