force-app/main/default/objects/TTS_Transaction__c/fields/Total_Recipient_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Recipient_Amount__c</fullName>
    <description>Sum of all Recipient amounts recorded against this Transaction, used to validate that distributions reconcile to the Actual Amount.</description>
    <inlineHelpText>Sum of all Recipient amounts recorded against this Transaction.</inlineHelpText>
    <label>Total Recipient Amount</label>
    <summaryForeignKey>TTS_Recipient__c.IP_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>TTS_Recipient__c.Amount__c</summarizedField>
    <type>Summary</type>
</CustomField>