force-app/main/default/objects/TTS_Transaction__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a recurring transaction occurrence to its initial Transaction.</description>
    <inlineHelpText>Select the initial Transaction in this recurring transaction chain.</inlineHelpText>
    <label>Initial Transaction</label>
    <referenceTo>TTS_Transaction__c</referenceTo>
    <relationshipLabel>Related Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>