force-app/main/default/objects/TTS_Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Categorises the transaction; available values depend on its direction.</description>
    <inlineHelpText>Select the category that best describes the incoming or outgoing transaction.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Direction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Application fee</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Event and workshop fee</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Legal and accounting fee</fullName>
            </value>
            <value>
                <fullName>Licence Income</fullName>
            </value>
            <value>
                <fullName>Litigation settlement</fullName>
            </value>
            <value>
                <fullName>Maintenance Fee</fullName>
            </value>
            <value>
                <fullName>Management Fee</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Network Access Fee</fullName>
            </value>
            <value>
                <fullName>Other Fee</fullName>
            </value>
            <value>
                <fullName>Patent - Attorney</fullName>
            </value>
            <value>
                <fullName>Patent - Examination</fullName>
            </value>
            <value>
                <fullName>Patent - Filing</fullName>
            </value>
            <value>
                <fullName>Patent - Maintenance</fullName>
            </value>
            <value>
                <fullName>Patent - Other Expense</fullName>
            </value>
            <value>
                <fullName>Patent - Search</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Royalties</fullName>
            </value>
            <value>
                <fullName>Sale of the patent</fullName>
            </value>
            <value>
                <fullName>Subscription Payment</fullName>
            </value>
            <value>
                <fullName>Subsidy</fullName>
            </value>
            <value>
                <fullName>Translation Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>