force-app/main/default/objects/TTS_Transaction__c/recordTypes/General_Expense_or_Fee.recordType-meta.xml
<RecordType>
    <fullName>General_Expense_or_Fee</fullName>
    <active>true</active>
    <description>General Transaction Type</description>
    <label>General Transaction</label>
</RecordType>