force-app/main/default/objects/TTS_Transaction__c/recordTypes/Patent_Expense.recordType-meta.xml
<RecordType>
    <fullName>Patent_Expense</fullName>
    <active>true</active>
    <description>Expense or Fee Related to Patent</description>
    <label>Patent Transaction</label>
</RecordType>