force-app/main/default/objects/TTS_Transaction__c/recordTypes/Space_Fee.recordType-meta.xml
<RecordType>
    <fullName>Space_Fee</fullName>
    <active>true</active>
    <description>Fee/Cost Related to a Space or Space Subscription</description>
    <label>Space Transaction</label>
</RecordType>