force-app/main/default/objects/TTS_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Direction__c</columns>
    <columns>Type__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>IP_Expected_Payment_Date__c</columns>
    <columns>IP_Actual_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>