force-app/main/default/objects/TTS_Transaction__c/listViews/All_Incoming_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Incoming_Transactions</fullName>
    <columns>NAME</columns>
    <columns>IP_Expected_Payment_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>IP_Transaction_Date_Time__c</columns>
    <columns>Type__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Direction__c</field>
        <operation>equals</operation>
        <value>Incoming</value>
    </filters>
    <label>All Incoming Transactions</label>
</ListView>